Updated tundra edge
Updated scripts to calculate tundra edge by combination of barren (from NLCD 2016), Dryas Dwarf Shrubs, and Eriophorum vaginatum.

--- a/statistics_PathSelection/HabitatTrainTest.ipynb
+++ b/statistics_PathSelection/HabitatTrainTest.ipynb
@@ -125,18 +125,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a classifier\n",
-    "classifier = ExtraTreesClassifier(n_estimators = 1000,\n",
-    "                                   criterion = 'gini',\n",
-    "                                   max_depth = None,\n",
-    "                                   min_samples_split = 2,\n",
-    "                                   min_samples_leaf = 1,\n",
-    "                                   min_weight_fraction_leaf = 0,\n",
-    "                                   max_features = None,\n",
-    "                                   bootstrap = False,\n",
-    "                                   oob_score = False,\n",
-    "                                   n_jobs = 2,\n",
-    "                                   random_state = 5)"
+    "# Define input file\n",
+    "input_file = os.path.join(data_input, 'allPaths_meanCovariates_forModelRun.csv')\n",
+    "# Define output folder\n",
+    "output_folder = os.path.join(data_output, 'NoCalf_Tundra')\n",
+    "# Define output report\n",
+    "output_report_name = 'report-moose-nocalf.html'\n",
+    "# Define species, genera, or aggregate name\n",
+    "taxon_name = 'Moose without Calves'\n",
+    "# Define calf status\n",
+    "calf_status = 0\n",
+    "# Define random state\n",
+    "rstate = 4"
    ]
   },
   {
@@ -145,16 +145,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define input file\n",
-    "input_file = os.path.join(data_input, 'allPaths_meanCovariates_forModelRun.csv')\n",
-    "# Define output folder\n",
-    "output_folder = os.path.join(data_output, 'Calf_RF')\n",
-    "# Define output report\n",
-    "output_report_name = 'report-moose-calf.html'\n",
-    "# Define species, genera, or aggregate name\n",
-    "taxon_name = 'Moose with Calves'\n",
-    "# Define calf status\n",
-    "calf_status = 1"
+    "# Create a classifier\n",
+    "classifier = RandomForestClassifier(n_estimators = 1000,\n",
+    "                                   criterion = 'gini',\n",
+    "                                   max_depth = None,\n",
+    "                                   min_samples_split = 2,\n",
+    "                                   min_samples_leaf = 1,\n",
+    "                                   min_weight_fraction_leaf = 0,\n",
+    "                                   max_features = 'sqrt',\n",
+    "                                   bootstrap = False,\n",
+    "                                   oob_score = False,\n",
+    "                                   n_jobs = 4,\n",
+    "                                   random_state = rstate)"
    ]
   },
   {
@@ -411,7 +413,7 @@
     "                                        'vacvit_mean': 'vacvit',\n",
     "                                        'wetsed_mean': 'wetsed'})\n",
     "# Shuffle data\n",
-    "input_data = shuffle(input_data, random_state = 5)"
+    "input_data = shuffle(input_data, random_state = rstate)"
    ]
   },
   {
@@ -453,7 +455,7 @@
    "outputs": [],
    "source": [
     "# Define 5-fold cross validation split methods\n",
-    "outer_cv_splits = StratifiedKFold(n_splits = 5, shuffle = True, random_state = 5)\n",
+    "outer_cv_splits = StratifiedKFold(n_splits = 5, shuffle = True, random_state = rstate)\n",
     "inner_cv_splits = StratifiedKFold(n_splits = 5, shuffle = False, random_state = None)"
    ]
   },
@@ -525,53 +527,53 @@
      "text": [
       "Conducting outer cross-validation iteration 1 of 5...\n",
       "\tOptimizing classification threshold...\n",
-      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:06)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:05)\n",
       "\t----------\n",
       "\tTraining classifier...\n",
-      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:00)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n",
       "\tPredicting outer cross-validation test data...\n",
-      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:00)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n",
       "Conducting outer cross-validation iteration 2 of 5...\n",
       "\tOptimizing classification threshold...\n",
-      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:06)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:05)\n",
       "\t----------\n",
       "\tTraining classifier...\n",
-      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:00)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n",
       "\tPredicting outer cross-validation test data...\n",
-      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:00)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n",
       "Conducting outer cross-validation iteration 3 of 5...\n",
       "\tOptimizing classification threshold...\n",
-      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:06)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:05)\n",
       "\t----------\n",
       "\tTraining classifier...\n",
-      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:01)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n",
       "\tPredicting outer cross-validation test data...\n",
-      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n",
       "Conducting outer cross-validation iteration 4 of 5...\n",
       "\tOptimizing classification threshold...\n",
-      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:06)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:05)\n",
       "\t----------\n",
       "\tTraining classifier...\n",
-      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n",
       "\tPredicting outer cross-validation test data...\n",
-      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n",
       "Conducting outer cross-validation iteration 5 of 5...\n",
       "\tOptimizing classification threshold...\n",
-      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:06)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:05)\n",
       "\t----------\n",
       "\tTraining classifier...\n",
-      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n",
       "\tPredicting outer cross-validation test data...\n",
-      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\tCompleted at 2021-06-10 12:43 (Elapsed time: 0:00:00)\n",
       "\t----------\n"
      ]
     }
@@ -724,7 +726,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "539\n"
+      "341\n"
      ]
     }
    ],
@@ -741,8 +743,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final AUC = 0.8386505622657225\n",
-      "Final Accuracy = 0.75139146567718\n"
+      "Final AUC = 0.9232570239334027\n",
+      "Final Accuracy = 0.8533724340175953\n"
      ]
     }
    ],
@@ -879,8 +881,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8423157017909204\n",
-      "0.7755102040816326\n"
+      "0.932414151925078\n",
+      "0.8651026392961877\n"
      ]
     }
    ],
@@ -898,7 +900,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "539\n"
+      "341\n"
      ]
     }
    ],
