Updated model train and predict
Updated model train and predict covariate sets, cross-validation, and reporting.

--- a/statistics_PathSelection/HabitatPredict_Test.ipynb
+++ b/statistics_PathSelection/HabitatPredict_Test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Abundance Predict\n",
+    "# Abundance Predict (Test Version)\n",
     "\n",
     "**Written by Timm Nawrocki, Amanda Droghini**\n",
     "\n",
@@ -25,7 +25,7 @@
     "# Usage: Must be executed as a Jupyter Notebook in an Anaconda 3 installation.\n",
     "# Description: \"Predict Vegetation Abundance\" applies the trained classifier and regressor to data in regular point grid\n",
     "# format stored in csv files to create a composite prediction representing the distribution and proportional abundance of the\n",
-    "# target species.\n",
+    "# target species. This test version predicts only a small subset of grids to double check results.\n",
     "# ---------------------------------------------------------------------------"
    ]
   },
@@ -48,7 +48,7 @@
     "# Set root directory\n",
     "root_folder = 'N:/ACCS_Work/Projects/WildlifeEcology/Moose_SouthwestAlaska/Data/Data_Output'\n",
     "# Define calf status\n",
-    "map_group = 'Calf'"
+    "map_group = 'NoCalf'"
    ]
   },
   {
@@ -186,8 +186,20 @@
    "outputs": [],
    "source": [
     "# Create a list of input files for the prediction step\n",
-    "os.chdir(grid_folder)\n",
-    "grid_files = glob.glob('*.csv')\n",
+    "grid_files = ['D5_37108.csv',\n",
+    "              'D5_37109.csv',\n",
+    "              'D5_37110.csv',\n",
+    "              'D5_37111.csv',\n",
+    "              'D5_37112.csv',\n",
+    "              'D5_37113.csv',\n",
+    "              'D5_37114.csv',\n",
+    "              'D5_37115.csv',\n",
+    "              'D5_37116.csv',\n",
+    "              'D5_37117.csv',\n",
+    "              'D5_37118.csv',\n",
+    "              'D5_37119.csv',\n",
+    "              'D5_37120.csv',\n",
+    "              'D5_37121.csv']\n",
     "grid_length = len(grid_files)"
    ]
   },
@@ -202,6 +214,7 @@
     "# Loop through the prediction function for all input files\n",
     "count = 1\n",
     "for grid in grid_files:\n",
+    "    \n",
     "    # Define the output csv file\n",
     "    output_csv = os.path.join(prediction_folder, grid)\n",
     "    \n",
