Update Prediction Steps
Updated train, test, predict, and post-process scripts.

--- a/statistics_PathSelection/HabitatPredict_Test.ipynb
+++ b/statistics_PathSelection/HabitatPredict_Test.ipynb
@@ -48,7 +48,7 @@
     "# Set root directory\n",
     "root_folder = 'N:/ACCS_Work/Projects/WildlifeEcology/Moose_SouthwestAlaska/Data/Data_Output'\n",
     "# Define calf status\n",
-    "map_group = 'NoCalf'"
+    "map_group = 'Calf'"
    ]
   },
   {
@@ -62,11 +62,11 @@
     "                           'extracted_grids')\n",
     "# Define model folder\n",
     "model_folder = os.path.join(root_folder,\n",
-    "                           'model_results/round_20210629',\n",
+    "                           'model_results/round_20210702',\n",
     "                           map_group)\n",
     "# Define prediction folder\n",
     "prediction_folder = os.path.join(root_folder,\n",
-    "                                'predicted_tables/round_20210629',\n",
+    "                                'predicted_tables/round_20210702',\n",
     "                                map_group)"
    ]
   },
