--- a/statistics_PathSelection/HabitatTrainTest.ipynb
+++ b/statistics_PathSelection/HabitatTrainTest.ipynb
@@ -89,7 +89,7 @@
     "data_input = os.path.join(root_folder,\n",
     "                          'Data_Input/paths')\n",
     "data_output = os.path.join(root_folder,\n",
-    "                           'Data_Output/model_results/round_20210629')"
+    "                           'Data_Output/model_results/round_20210702')"
    ]
   },
   {
@@ -119,11 +119,11 @@
    "outputs": [],
    "source": [
     "# Define input file\n",
-    "input_file = os.path.join(data_input, 'paths_meanCovariates_explanatory.csv')\n",
+    "input_file = os.path.join(data_input, 'allPaths_meanCovariates.csv')\n",
     "# Define calf status\n",
-    "calf_status = 0\n",
+    "calf_status = 1\n",
     "# Define random state\n",
-    "rstate = 17\n",
+    "rstate = 21\n",
     "# Define response names\n",
     "if calf_status == 0:\n",
     "    output_folder = os.path.join(data_output, 'NoCalf')\n",
